# qt_task2_mvc

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  smth.xml  treeitem.cpp  treeitem.h  treemodel.cpp  treemodel.h  window.cpp  window.h  window.ui
translations/: qt_mvc_en_US.ts  qt_mvc_ru_RU.ts
